--- a/app/partials/colophon.html
+++ b/app/partials/colophon.html
@@ -1,4 +1,4 @@
 <div id="colophon">
   <p>&copy; Nicolas Duvieusart Déry</p>
-  <p>data last updated on 12/14/2014, powered by <a href="http://www.evalueanalytics.com" title="evalue analytics">evalue analytics</a></p>
+  <p>data as of 12/14/2014, powered by <a href="http://www.evalueanalytics.com" title="evalue analytics">evalue analytics</a></p>
 </div>
