--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -2,5 +2,5 @@
   <h1>globalize</h1>
   <h2>an evalue analytics fans per country visualisation</h2>
 
-  <p>globalize is a visualisation of the fans per country for the top ranking brands in each industries available in evalue analytics.</p>
+  <p>globalize is a visualisation of the fans per country for the top ranking brands in each industries available in evalue analytics.<br />where your's from ?</p>
 </div>
