--- a/app/partials/colophon.html
+++ b/app/partials/colophon.html
@@ -1,4 +1,4 @@
 <div id="colophon">
-  <p>&copy; Nicolas Duvieusart Déry</p>
-  <p>data as of 12/14/2014, powered by <a href="http://www.evalueanalytics.com" title="evalue analytics">evalue analytics</a></p>
+  <p>brought to you by <a href="http://nddery.ca/" title="My website!">Nicolas Duvieusart Déry</a></p>
+  <p>fans count as of 12/14/2014, powered by <a href="http://www.evalueanalytics.com" title="evalue analytics">evalue analytics</a></p>
 </div>
